[package]
name = "blockish-raycasting"
version = "0.1.0"
authors = ["yazgoo <yazgoo@gmail.com>"]
description = "raycasting in the terminal"
edition = "2018"
license = "MIT"

[dependencies]
crossterm = "0.15"
crossterm_input = "0.5"
blockish = "0.0.8"
rand = "0.7"
image = "0.22"
laminar = "0.3"
crossbeam-channel = "0.3"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["blocking"] }
zip = "0.5"
scan_fmt = "0.2"

[profile.release]
debug=1
